--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -111,7 +111,7 @@
       },
       "contextMenu": {
         "name": "Context Menu",
-        "description": "`contextMenus`\nFirefox requires this permission to be listed in the manifest's permissions block at install time, [Read More](https://github.com/Lanshuns/Qwacky?tab=readme-ov-file#browser-specific-permission-handling-and-limitations)"
+        "description": "`contextMenus`\nFirefox requires this permission to be listed in the manifest's permissions block at install time, [Read More](https://github.com/endercat-alu/Qwacky?tab=readme-ov-file#browser-specific-permission-handling-and-limitations)"
       },
       "contextMenuFeatures": {
         "name": "Autofill",
